feat: implementa método de buscar produtos pelo nome na ProductController, e refatora o método getProductsByName na ProductService